--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Форма пациента</title>
-    <link rel="stylesheet" href="style.css">nk
+    <link rel="stylesheet" href="style.css">
+    
     <script src="./script.js"></script>
 </head>
 
